# discord_dice_bot

./: README.md  pyproject.toml
app/: dice.py  main.py
